Alignment fix to override flymine webapp.css.

--- a/js/intermine/im-tables/latest/tables.css
+++ b/js/intermine/im-tables/latest/tables.css
@@ -894,6 +894,7 @@ td.im-result-subtable .im-subtable {
 }
 
 .im-query-trail .im-step {
+    margin-left: 0px;
     padding-left: 1em;
     padding-right: 1em;
     min-height: 4em;
